@@ -12,6 +12,7 @@ Bug fixes:
 Enhancements:
 - #6998 Remove functionality related to the screen saver synchronisation
 - #7026 Update the way we package OpenSSL for Windows build
+- #7037 Add Ubuntu 21.04 build
 ===========
 
 v1.14.0-stable
